# langchain_agent

./: Makefile  README.md  docker-compose.personal_agent.yml  docker-compose.yaml  pyproject.toml
personal_agent/: Dockerfile  character_agent.py  custom_llm.py  discussion_agent.py  discussion_agent_streamlit.py  lang_agent.py  multi_zero_shot_agent.py  multi_zero_shot_agent_streamlit.py  zero_shot_agent.py
personal_agent/chat_logs/: chat_log_20250508_111243.txt  chat_log_20250508_111720.txt  chat_log_20250509_115110.txt  chat_log_20250512_105041.txt  chat_log_20250512_105257.txt  chat_log_20250512_112231.txt  chat_log_20250512_112411.txt  chat_log_20250512_114000.txt
personal_agent/docs/: memo.md
