[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = ""
authors = ["yunosuke068 <yunosuke068209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
streamlit = "^1.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
